# Accela

./: README.md  test.cpp
src/: .gitignore  CMakeLists.txt  TODO.txt  vcpkg.json
src/AccelaEditor/: CMakeLists.txt  Driver.cpp  GlobalEventFilter.h  MessageBasedScene.h  SceneMessageListener.h
src/AccelaEditor/EditorScene/: EditorScene.cpp  EditorScene.h  Messages.h  SceneCommand.h  SceneQuitCommand.h  SceneSyncer.cpp  SceneSyncer.h
src/AccelaEditor/Resources/: resources.qrc
src/AccelaEditor/Thread/: AccelaThread.cpp  AccelaThread.h  PackageLoadThread.cpp  PackageLoadThread.h  WorkerThread.h
src/AccelaEditor/Util/: ErrorDialog.h  ModelUpdate.h  PollingMessageFulfiller.cpp  PollingMessageFulfiller.h  QtFutureNotifier.cpp  QtFutureNotifier.h  WorkerThread.h
src/AccelaEditor/View/: AccelaWindow.cpp  AccelaWindow.h  ComponentWidget.cpp  ComponentWidget.h  ConstructsWidget.cpp  ConstructsWidget.h  CreatePackageDialog.cpp  CreatePackageDialog.h  EntitiesWidget.cpp  EntitiesWidget.h  EntityWidget.cpp  EntityWidget.h  MainWindow.cpp  MainWindow.h  MinHeightLayout.cpp  MinHeightLayout.h  ModelRenderableComponentWidget.cpp  ModelRenderableComponentWidget.h  ResourcesWidget.cpp  ResourcesWidget.h  TransformComponentWidget.cpp  TransformComponentWidget.h
src/AccelaEditor/ViewModel/: MainWindowVM.cpp  MainWindowVM.h  PackageSelectVM.cpp  PackageSelectVM.h
src/AccelaEditor/Window/: AccelaWindow.cpp  AccelaWindow.h  MainWindow.cpp  MainWindow.h
src/AccelaEngine/: CMakeLists.txt  Config.cmake.in
src/AccelaEngine/AccelaCommon/: CMakeLists.txt
src/AccelaEngine/AccelaCommon/src/: ImageData.cpp
src/AccelaEngine/AccelaEngine/: CMakeLists.txt
src/AccelaEngine/AccelaEngine/src/: Builder.cpp  Camera2D.cpp  Camera3D.cpp  Engine.cpp  Engine.h  EngineRuntime.cpp  EngineRuntime.h  ForwardDeclares.h  Metrics.h  ResourceIdentifier.cpp  RunState.cpp  RunState.h  ShaderUtil.h  Util.h
src/AccelaEngine/AccelaEngineDesktop/: CMakeLists.txt
src/AccelaEngine/AccelaEngineDesktop/src/: DesktopVulkanContext.cpp  EngineDesktop.cpp  OpenXR.cpp  OpenXR.h
src/AccelaEngine/AccelaPlatform/: CMakeLists.txt
src/AccelaEngine/AccelaPlatformDesktop/: CMakeLists.txt
src/AccelaEngine/AccelaPlatformDesktop/src/: PlatformDesktop.cpp  SDLUtil.cpp  SDLUtil.h
src/AccelaEngine/AccelaPlatformDesktopQt/: CMakeLists.txt
src/AccelaEngine/AccelaPlatformDesktopQt/src/: PlatformQt.cpp  QtUtil.cpp  QtVulkanCalls.cpp  QtVulkanInstance.cpp
src/AccelaEngine/AccelaPlatformDesktopSDL/: CMakeLists.txt
src/AccelaEngine/AccelaPlatformDesktopSDL/src/: PlatformSDL.cpp  SDLUtil.cpp  SDLUtil.h
src/AccelaEngine/AccelaRenderer/: CMakeLists.txt
src/AccelaEngine/AccelaRenderer/src/: RenderLogic.cpp  RendererBase.cpp
src/AccelaEngine/AccelaRendererVk/: CMakeLists.txt
src/AccelaEngine/AccelaRendererVk/src/: ForwardDeclares.h  InternalCommon.h  InternalId.h  PostExecutionOps.h  RenderOperation.cpp  RenderOperation.h  RenderState.cpp  RenderState.h  RendererBuilder.cpp  RendererVk.cpp  RendererVk.h  VulkanCalls.cpp  VulkanObjs.cpp  VulkanObjs.h
src/LibAccelaCommon/: CMakeLists.txt
src/LibAccelaCommon/src/: ImageData.cpp  Timer.cpp
src/LibAccelaCommon/src/Log/: StdLogger.cpp
src/LibAccelaCommon/src/Metrics/: InMemoryMetrics.cpp
src/LibAccelaCommon/src/Thread/: MessageDrivenThreadPool.cpp  ThreadUtil.cpp
src/LibAccelaEngine/: CMakeLists.txt
src/LibAccelaEngine/src/: Builder.cpp  Camera2D.cpp  Camera3D.cpp  Engine.cpp  Engine.h  EngineAssets.cpp  EngineAssets.h  EngineRuntime.cpp  EngineRuntime.h  ForwardDeclares.h  KeyboardState.cpp  KeyboardState.h  Metrics.h  MouseState.cpp  MouseState.h  RenderTarget.cpp  RenderTarget.h  ResourceIdentifier.cpp  RunState.cpp  RunState.h  ShaderUtil.h  Util.h
src/LibAccelaEngine/src/Audio/: AudioManager.cpp  AudioManager.h  AudioUtil.cpp  AudioUtil.h
src/LibAccelaEngine/src/Component/: AudioComponent.h  ComponentState.h  Components.cpp  LightRenderableStateComponent.h  ModelAnimationComponent.h  ModelRenderableStateComponent.h  PhysicsStateComponent.h  RenderableStateComponent.h
src/LibAccelaEngine/src/Entity/: CommandEntryEntity.cpp  EnginePerfMonitorEntity.cpp  Entity.cpp  ModelEntity.cpp  ObjectEntity.cpp  ScreenTextEntity.cpp  SpriteEntity.cpp
src/LibAccelaEngine/src/Extra/: GrassMeshCreator.cpp  InfinitePerlinNoise.cpp  PerlinNoise.cpp  StandardGrassGenerator.cpp  StandardTreeGenerator.cpp  TreeMeshCreator.cpp  TreeMeshUtil.cpp
src/LibAccelaEngine/src/Model/: AssimpLogStream.cpp  AssimpLogStream.h  AssimpUtil.h  ModelLoader.cpp  ModelLoader.h  ModelPose.h  ModelView.cpp  ModelView.h  RegisteredModel.h
src/LibAccelaEngine/src/Package/: CEntityModel.h  (+11 more)
src/LibAccelaEngineDesktop/: CMakeLists.txt
src/LibAccelaEngineDesktop/src/: DesktopVulkanCalls.h  DesktopVulkanContext.cpp  DesktopVulkanContext.h  EngineDesktop.cpp
src/LibAccelaPlatform/: CMakeLists.txt
src/LibAccelaPlatformDesktop/: CMakeLists.txt
src/LibAccelaPlatformDesktop/src/: PlatformDesktop.cpp  PlatformSDL.cpp  SDLUtil.cpp  SDLUtil.h
src/LibAccelaPlatformDesktopQt/: CMakeLists.txt
src/LibAccelaPlatformDesktopQt/src/: PlatformQt.cpp  QtUtil.cpp  QtVulkanInstance.cpp
src/LibAccelaPlatformDesktopSDL/: CMakeLists.txt
src/LibAccelaPlatformDesktopSDL/src/: PlatformSDL.cpp
src/LibAccelaRenderer/: CMakeLists.txt
src/LibAccelaRenderer/src/: RenderLogic.cpp  RendererBase.cpp
src/LibAccelaRendererVk/: CMakeLists.txt
src/LibAccelaRendererVk/src/: ForwardDeclares.h  FrameState.cpp  FrameState.h  Frames.cpp  Frames.h  InternalCommon.h  InternalId.h  Metrics.h  PostExecutionOp.cpp  PostExecutionOp.h  PostExecutionOps.cpp  PostExecutionOps.h  RenderOperation.cpp  RenderOperation.h  RenderState.cpp  RenderState.h  RendererBuilder.cpp  RendererVk.cpp  RendererVk.h  VulkanCalls.cpp  VulkanObjs.cpp  VulkanObjs.h
src/TestDesktopApp/: CMakeLists.txt  CubeMesh.h  DevScene.cpp  DevScene.h  Driver.cpp  InvertedCylinderMesh.h  MovementCommands.h  Player.cpp  Player.h  SphereMesh.h  TestScene.cpp  TestScene.h
src/cmake_modules/: Config.cmake.in  FindOpenAL.cmake  FindOpenVR.cmake  FindPhysX.cmake
(+947 files in other folders)
